--- a/app/src/main/res/layout/riddle_screen.xml
+++ b/app/src/main/res/layout/riddle_screen.xml
@@ -13,8 +13,10 @@
         android:src="@drawable/screen_blank_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/screen_blank_bg" />
 
     <TextView
@@ -25,8 +27,10 @@
         android:text="TextView"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="34dp" />
+        app:layout_constraintBottom_toTopOf="@+id/riddleTitle"
+        app:layout_constraintEnd_toStartOf="@+id/riddleTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/riddleTitle"
